fixed scrollbar bug that reset the scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -764,7 +764,7 @@ nav li {
 }
 
 .anchor {
-  overflow-anchor: auto;
+  overflow-anchor: none;
   height: 1px;
 }
 
